# CarProjectRaylib

./: .gitignore  CMakeLists.txt  README.md
assets/models/: MiniCooper.glb  MiniCooper.mtl  MiniCooper3.glb
assets/shaders/: testshader.fs  testshader.vs
include/: rlImGui.h
models/: MiniCooper.glb
src/: Master.h  camera.hpp  draw.hpp  gui.hpp  imGuiUtil.hpp  lights.hpp  main.cpp  maintest.cpp  shader.hpp
src/menus/: BottomBar.hpp  BurgerMenu.hpp  Debug.hpp  Gauges.hpp  StatusBar.hpp
